--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@wymp/auth-gateway-header-decoder",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A small Express middleware that decodes the HTTP header (a JWT) from a request forwarded by the Wymp auth gateway and throws an error on problems.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "npx tsc",
     "check": "npx tsc --noEmit",
+    "docgen": "npx typedoc src/index.ts",
     "test": "jest",
     "prepublishOnly": "rm -Rf dist; npx tsc"
   },
@@ -38,6 +39,7 @@
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
     "ts-jest": "^27.0.7",
+    "typedoc": "^0.22.6",
     "typescript": "^3.6.0 || ^4.4.4"
   },
   "prettier": {
