--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wymp/auth-gateway-header-decoder",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A small Express middleware that decodes the HTTP header (a JWT) from a request forwarded by the Wymp auth gateway and throws an error on problems.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -26,13 +26,13 @@
   },
   "homepage": "https://github.com/wymp/ts-auth-gateway-header-decoder#readme",
   "dependencies": {
-    "@wymp/types": "^0.1.0-rc8",
+    "@wymp/types": "^0.1.0-rc8 || ^0.2.0-rc6",
     "@wymp/http-errors": "^1.8.0",
     "@types/jsonwebtoken": "^8.5.5",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.0",
     "husky": "^6.0.0",
     "jest": "^27.3.1",
     "node-mocks-http": "^1.11.0",
